--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.3",
+    "react-router-hash-link": "^2.4.3",
     "swiper": "^11.2.1"
   },
   "devDependencies": {
